[package]
name = "sqlx_memory_test"
version = "0.1.0"
authors = ["Samuel J Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", features = ["macros", "sqlite"] }
anyhow = "1.0.31"
async-std = { version = "1.5.0", features = ["attributes"] }
